// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeckDetailsWidget /> renders correctly with description 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    Test deck
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-star fa-w-18 fa-fw deck-favourite float-right"
      data-deck-id={1}
      data-icon="star"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </h4>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <strong>
        Description:
      </strong>
       
      <span>
        Test deck description
      </span>
    </li>
    <li
      className="list-group-item"
    >
      <strong>
        Max cards:
      </strong>
       
      <span>
        5
      </span>
    </li>
  </ul>
  <div
    className="card-footer"
  >
    <button
      className="btn btn-success pull-right"
      data-deck-id={1}
      id="save-deck"
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`<DeckDetailsWidget /> renders correctly with favourite 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    Test deck
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-star fa-w-18 fa-fw deck-favourite float-right enabled"
      data-deck-id={1}
      data-icon="star"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </h4>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <strong>
        Description:
      </strong>
       
      <span />
    </li>
    <li
      className="list-group-item"
    >
      <strong>
        Max cards:
      </strong>
       
      <span>
        5
      </span>
    </li>
  </ul>
  <div
    className="card-footer"
  >
    <button
      className="btn btn-success pull-right"
      data-deck-id={1}
      id="save-deck"
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`<DeckDetailsWidget /> renders correctly without favourite 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    Test deck
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-star fa-w-18 fa-fw deck-favourite float-right"
      data-deck-id={1}
      data-icon="star"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </h4>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <strong>
        Description:
      </strong>
       
      <span />
    </li>
    <li
      className="list-group-item"
    >
      <strong>
        Max cards:
      </strong>
       
      <span>
        5
      </span>
    </li>
  </ul>
  <div
    className="card-footer"
  >
    <button
      className="btn btn-success pull-right"
      data-deck-id={1}
      id="save-deck"
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;
